# image-preference-modelling

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.py
docs/: architecture.md  update_roadmap.md
docs/superpowers/plans/: 2026-04-24-generation-dry-run-config-alignment.md
docs/superpowers/specs/: 2026-04-24-generation-dry-run-config-design.md
src/image_preference_modelling/: __init__.py  app_context.py  config.py  generation_pipeline.py  gradio_app.py
src/image_preference_modelling/gepa/: __init__.py  critique_judge.py  mutation_engine.py  optimizer.py  reward.py  scoring.py
src/image_preference_modelling/jobs/: __init__.py  job_launcher.py
src/image_preference_modelling/prompt_sets/: __init__.py  intent_rewriter.py
src/image_preference_modelling/storage/: __init__.py  contracts.py  state_store.py
tests/: conftest.py  test_config.py  test_generation_pipeline.py  test_generation_pipeline_online.py  test_gepa_critique_judge.py  test_gepa_optimizer.py  test_gepa_reward.py  test_gepa_scoring.py  test_gradio_app.py  test_intent_rewriter.py  test_job_launcher.py  test_state_store.py
